# AStock

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
data/: config.example.json  (+2 more)
src/python/: pyproject.toml
src/python/astock/: __init__.py  api.py  cli.py
src/python/astock/analysis/: __init__.py  technical.py
src/python/astock/analysis/__tests__/: test_technical.py
src/python/astock/backtest/: __init__.py  backtest_cli.py  engine.py  strategies.py
src/python/astock/backtest/__tests__/: test_engine.py
src/python/astock/config/: __init__.py  email_config.py  user_config.py
src/python/astock/data/: __init__.py  industry.py
src/python/astock/data/__tests__/: test_industry.py
src/python/astock/learning/: __init__.py  style_analyzer.py
src/python/astock/monitor/: __init__.py  alert_engine.py  channels.py  monitor_service.py  scanner.py  service_status.py  watch_cli.py
src/python/astock/monitor/__tests__/: test_email_notification.py  test_service_status.py
src/python/astock/portfolio/: __init__.py  portfolio.py  position.py  risk_manager.py
src/python/astock/quote/: __init__.py  akshare_client.py  quote_service.py
src/python/astock/quote/__tests__/: test_quote_service.py
src/python/astock/recommend/: __init__.py  recommender.py
src/python/astock/stock_picker/: __init__.py  factors.py  screener.py
src/python/astock/storage/: __init__.py  database.py  models.py
src/python/astock/utils/: __init__.py  cache.py  exceptions.py  logger.py
src/python/typings/akshare/: __init__.pyi
(+98 files in other folders)
