[project]
name = "astock"
version = "0.1.0"
description = "A股交易策略分析工具 - Python 数据层"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "ta-lib>=0.4.28",
    "aiosqlite>=0.19.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.8.0"
]

[project.scripts]
astock = "astock.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["astock*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
